# contvqa

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/diverse_domains/: test_question_ids.json  train_question_ids.json  valid_question_ids.json
data/question_types/: test_question_ids.json  train_question_ids.json  valid_question_ids.json
data/taxonomy_domains/: test_question_ids.json  train_question_ids.json  valid_question_ids.json
scripts/: download_extra_data.sh  image_based_splits.sh
src/contvqa/: answer_preprocessing.py  common.py  get_dataset_statistics.py  get_image_based_settings.py  plot_distributions.py
task_orders/: diverse_domains.csv  question_types.csv  taxonomy_domains.csv
