[project]
name = "contvqa"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MalvinaNikandrou", email = "nikandroumalvina@gmail.com"},
]
dependencies = [
    "pycocotools>=2.0.7",
    "tabulate>=0.9.0",
    "spacy>=3.7.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
